fixes #8557 #8559  replace the icons that only use color with new icons that use color and different shapes.  Also provide text only equivalents for when system is in high contrast mode.
git-svn-id: http://svn.dojotoolkit.org/src/dojo/trunk@17300 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/resources/dnd.css
+++ b/resources/dnd.css
@@ -7,3 +7,7 @@
 .dojoDndCopy .dojoDndAvatarHeader	{background-image: url(images/dndNoCopy.png); background-repeat: no-repeat;}
 .dojoDndMove .dojoDndAvatarCanDrop .dojoDndAvatarHeader	{background-image: url(images/dndMove.png); background-repeat: no-repeat;}
 .dojoDndCopy .dojoDndAvatarCanDrop .dojoDndAvatarHeader	{background-image: url(images/dndCopy.png); background-repeat: no-repeat;}
+
+.dijit_a11y .dojoDndAvatar { font-size: 1em; font-weight:bold;}
+.dijit_a11y .dojoDndAvatarHeader td {padding-left:2px !important;}
+.dijit_a11y .dojoDndAvatarHeader td span {padding-right: 5px;}
